#add_library(glare_engine_common OBJECT)

#add_dependencies(
#    glare_engine # glare_engine_common
#
#    glare_common
#    glare_app
#    glare_graphics
#    glare_math
#    glare_util
#)

#target_link_libraries(
#    glare_engine # glare_engine_common
#    
#    PUBLIC
#
#    glare_common
#    glare_app
#    glare_graphics
#    glare_math
#    glare_util
#
#    # Embedded third-party libraries.
#    # (e.g. stb_image)
#    glare_third_party
#)