#add_library(glare_engine_world_common OBJECT)
#
#add_dependencies(
#    glare_engine_world_common
#
#    glare_common
#    glare_engine_common
#)
#
#target_link_libraries(
#    glare_engine_world_common
#
#    PUBLIC
#
#    glare_common
#    glare_engine_common
#    
#    glare_engine_meta
#    glare_engine_resource_manager
#    glare_engine_entity
#    glare_engine_input
#)